mobile overflow fix on root div, now fits all screens 100% width

--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -7,6 +7,7 @@ nav.navbar {
 
 .mynav {
   width: 100%;
+  padding: 0 !important;
   background-color: #3584cd;
 }
 
